--- a/treeChallengeapi-01/appsettings.json
+++ b/treeChallengeapi-01/appsettings.json
@@ -1,8 +1,6 @@
 {
     "ConnectionStrings": {
-
-        "LocalDbContext": "Data Source=.;Initial Catalog=TreeChallenge;Integrated Security=SSPI;",
-        "AzureDbContext": "Server=tcp:treechallengedbserver.database.windows.net,1433;Initial Catalog=treechallengedb;Persist Security Info=False;User ID=treechallengedbserveradmin;Password=%#`5*v9N@JHtY5X\\;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "TreeChallengeDbContext": "Data Source=.;Initial Catalog=TreeChallenge;Integrated Security=SSPI;",
     },
     "Logging": {
         "LogLevel": {
